--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "headlessui": "^0.0.0",
     "mongoose": "^7.5.1",
     "next": "^13.4.19",
     "postcss": "8.4.29",
