--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "headlessui": "^0.0.0",
+    "jwt-decode": "^3.1.2",
     "mongoose": "^7.5.1",
     "next": "^13.4.19",
     "postcss": "8.4.29",
