--- a/package.json
+++ b/package.json
@@ -9,19 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.17",
-    "autoprefixer": "10.4.15",
+    "@editorjs/code": "^2.8.0",
+    "@editorjs/image": "^2.8.1",
+    "autoprefixer": "^10.4.16",
     "axios": "^1.5.0",
+    "editorjs-html": "^3.4.3",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "he": "^1.2.0",
     "headlessui": "^0.0.0",
+    "highlight.js": "^11.8.0",
     "jwt-decode": "^3.1.2",
     "mongoose": "^7.5.1",
     "next": "^13.4.19",
-    "postcss": "8.4.29",
+    "postcss": "^8.4.29",
     "react": "18.2.0",
+    "react-ace": "^10.1.0",
     "react-dom": "18.2.0",
-    "react-quill": "^2.0.0",
+    "react-editor-js": "^2.1.0",
+    "react-syntax-highlighter": "^15.5.0",
     "tailwindcss": "3.3.3"
   }
 }
