--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
   },
   "dependencies": {
     "@editorjs/code": "^2.8.0",
+    "@editorjs/editorjs": "^2.28.0",
     "@editorjs/image": "^2.8.1",
+    "@editorjs/paragraph": "^2.10.0",
     "autoprefixer": "^10.4.16",
-    "axios": "^1.5.0",
     "editorjs-html": "^3.4.3",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
-    "he": "^1.2.0",
     "headlessui": "^0.0.0",
     "highlight.js": "^11.8.0",
     "jwt-decode": "^3.1.2",
@@ -29,5 +29,8 @@
     "react-editor-js": "^2.1.0",
     "react-syntax-highlighter": "^15.5.0",
     "tailwindcss": "3.3.3"
+  },
+  "devDependencies": {
+    "@types/node": "^20.8.3"
   }
 }
